# neardws.github.io

./: .env.local.op  .gitattributes  .gitignore  .pre-commit-config.yaml  .rubocop.yml  .stignore  AGENTS.md  CNAME  Gemfile  HEARTBEAT.md  IDENTITY.md  KEYS.md  MEMORY.md  README.md  SHIPKEY_SETUP.md  SOUL.md  TOOLS.md  USER.md  _config.yml  edge-vla-gaps-analysis.md  findings.md  forward  gs_data.json  gs_data_shieldsio.json  home-inventory.md  llms.txt  mac-migration-checklist.md  macos-homebrew-install-checklist.md  migrate-to-1password.sh  openclaw-ecosystem-prompt-v2.md  progress.md  remote-macos-mineru.skill  shipkey.json  task_plan.md  tasks.json  x_content_extractor.py  x_smart_digest_v2.sh.synced
.clawdbot/: local-memory.json  local-profile.json
.clawdhub/: lock.json
.clawhub/: lock.json
.venv-agentmail/: pyvenv.cfg
_data/: navigation.yml  publications.json
_includes/: author-profile.html  head.html  masthead.html
_layouts/: default.html  post.html
_pages/: about.md  about_cn.md  blog.md  services.md
_posts/: 2026-01-20-vibe-coding-best-practices-en.html  2026-01-20-vibe-coding-best-practices.html  2026-02-11-moltbot-ecosystem-guide-en.html  2026-02-11-moltbot-ecosystem-guide.html  2026-02-14-lalaland-10-years-en.html  2026-02-14-lalaland-10-years.html
services/token-tracker/: pyproject.toml  tt
services/token-tracker/src/: config.py
services/token-tracker/src/cli/: main.py  report.py
services/token-tracker/src/db/: connection.py  schema.sql
services/token-tracker/src/ingestors/: base.py  cliproxyapi.py  droid.py  openclaw.py
(+334 files in other folders)
